Add United_States named example for populations detail endpoint
